# o365-cli

./: .gitignore  GEMINI.md  README.md  TODO.md
.github/: copilot-instructions.md
cli/: .gitignore  Cargo.toml  GEMINI.md
cli/src/: app.rs  auth.rs  interactive.rs  main.rs  profile.rs  runner.rs  tui.rs  ui.rs
core/: package.json
core/src/: client.ts  index.ts
core/src/commands/iam/: offboard.ts
core/src/commands/sec/: shadow-it.ts
core/src/services/: graph.ts
core/src/utils/: ipc.ts
docs/: IAM_RESEARCH.md  RESOURCE_RESEARCH.md  SECURITY_RESEARCH.md  SHADOW_IT_RESEARCH.md
legacy/01-IAM-GracefulOffboarding/: Invoke-GracefulOffboarding_Action.ps1  README.md
legacy/01-IAM-GuestUserCleanup/: Invoke-GuestCleanup_Action.ps1  README.md
legacy/01-IAM-NewUserOnboarding/: GEMINI.md  README.md
legacy/02-SEC-ExternalSharingAudit/: Invoke-ExternalSharing_Audit.ps1  README.md
legacy/02-SEC-MailboxPermissionsAudit/: README.md
legacy/02-SEC-ShadowITGovernance/: GEMINI.md  Invoke-ShadowIT_Report.ps1  README.md
legacy/02-SEC-SurgicalLockdown/: GEMINI.md  Invoke-SurgicalLockdown.ps1  README.md
legacy/03-RES-LicenseOptimization/: Invoke-LicenseOptimization_Report.ps1  README.md
legacy/03-RES-StaleDeviceCleanup/: GEMINI.md  Invoke-StaleDevice_Cleanup.ps1  README.md
legacy/04-REP-360OffboardingAnalyzer/: Invoke-Employee360_Report.ps1  README.md
legacy/04-REP-TeamsActivityReport/: README.md
